--- a/backend/package.json
+++ b/backend/package.json
@@ -72,7 +72,7 @@
     "supertest": "^6.3.4"
   },
   "engines": {
-    "node": ">=14.0.0",
+    "node": "18.x",
     "npm": ">=6.0.0"
   },
   "nodemonConfig": {
