--- a/backend/package.json
+++ b/backend/package.json
@@ -41,14 +41,17 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.0.1",
+    "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "node-fetch": "^2.7.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "redis": "^5.1.0",
     "sequelize": "^6.37.2",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.3",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7"
   },
