--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,9 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "@solana/web3.js": "^1.98.4",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -52,6 +55,7 @@
     "sequelize": "^6.37.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.3",
+    "stripe": "^20.2.0",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7"
   },
