--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "@logtail/node": "^0.5.6",
     "@sentry/node": "^10.39.0",
     "@solana/web3.js": "^1.98.4",
     "@stripe/react-stripe-js": "^5.4.1",
